kotlin-ide/idea/testData/checker/scripts/uninitializedVariable.kts
// RUNTIME_WITH_SCRIPT_RUNTIME

val x = <error descr="[UNINITIALIZED_VARIABLE] Variable 'y' must be initialized">y</error>
val y = 3